--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,21 +1,27 @@
 [project]
 name = "car-price-prediction"
-version = "0.1.0"
-description = "Add your description here"
+version = "1.0.0"
+description = "نموذج تعلم آلي للتنبؤ بأسعار السيارات"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "jupyter>=1.1.1",
-    "matplotlib>=3.10.6",
-    "numpy>=2.3.3",
-    "pandas>=2.3.2",
-    "scikit-learn>=1.7.2",
-    "seaborn>=0.13.2",
+    "numpy>=1.26.0",
+    "pandas>=2.3.0",
+    "scikit-learn>=1.7.0",
+    "matplotlib>=3.10.3",
+    "seaborn>=0.13.0",
+    "jupyter>=1.0.0",
+    "xgboost>=2.0.0",
+    "catboost>=1.2.0",
 ]
 
-[dependency-groups]
+[project.optional-dependencies]
 dev = [
-    "black>=25.1.0",
-    "flake8>=7.3.0",
-    "pytest>=8.4.2",
+    "pytest>=7.0.0",
+    "black>=23.0.0",
+    "flake8>=6.0.0",
+    "jupyterlab>=4.0.0",
 ]
+
+[tool.uv]
+dev-dependencies = ["pytest", "black", "flake8", "jupyterlab"]
